--- a/src/schools.html
+++ b/src/schools.html
@@ -8,10 +8,10 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Szkoły i uczelnie w Polsce</title>
 	<meta content="NK - szukaj znajomych w szkołach i klasach. Tysiące szkół, miliony uczniów." name="description">
-	<link href="http://0.s-nk.pl/img/favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-	<link href="http://0.s-nk.pl/img/favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
-	<link href="http://0.s-nk.pl/img/favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
-	<link href="http://0.s-nk.pl/files/favicons/safari-pinned-tab.svg" rel="mask-icon">
+	<link href="https://0.s-nk.pl/img/favicons/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+	<link href="https://0.s-nk.pl/img/favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+	<link href="https://0.s-nk.pl/img/favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+	<link href="https://0.s-nk.pl/files/favicons/safari-pinned-tab.svg" rel="mask-icon">
 	<link href="css.css" rel="stylesheet">
 	<link href="normalize.css" rel="stylesheet">
 	<link href="schools.css?__SCHOOLS_ID__" rel="stylesheet">
@@ -40,6 +40,15 @@
 							</li>
 							<li>
 								<a href="http://nk.pl/forum">Forum</a>
+							</li>
+							<li>
+								<a href="./profile.html">Twój profil</a>
+							</li>
+							<li>
+								<a href="http://nk.pl/login">Logowanie</a>
+							</li>
+							<li>
+								<a href="http://nk.pl/register">Rejestracja</a>
 							</li>
 						</ul>
 					</nav>
@@ -105,7 +114,7 @@
 								</li>
 								<li class="grid-item grid-item--1of2 grid-item--s_1of3 grid-item--m_1of4 grid-item--l_1of5">
 									<div class="box-school-type">
-										<a id="school-type--" href="#" title="Liceum ogólnokształcące">
+										<a id="school-type--comprehensive" href="#" title="Liceum ogólnokształcące">
 										<div class="box-school-type__gfx waves-effect">
 											<i class="icon-school-type icon-school-type--comprehensive"></i>
 										</div><span class="box-school-type__name">Liceum ogólnokształcące</span></a>
